<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:gravity="center"
    tools:context=".ui.theme.signup">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_background"
        android:alpha="0.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="48sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/add_photo"
                android:layout_width="127dp"
                android:layout_height="112dp"
                android:layout_marginTop="32dp"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:cropToPadding="true"
                android:scaleType="fitCenter"
                android:src="@drawable/add_photo"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/email"
                android:inputType="textPassword"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/username"
                android:inputType="textPassword"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/confirmPassword_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@drawable/rounded_corner"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="18dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/submit"
                android:layout_width="240dp"
                android:layout_height="72dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/white"
                android:fontFamily="sans-serif-black"
                android:padding="16dp"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:textSize="26dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyhaveaccount"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:layout_marginTop="2dp"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>