<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    tools:context=".ui.theme.login_1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_background"
        android:alpha="0.7">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="28dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/hint_username"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20dp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="text"
            android:id="@+id/username_input"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/hint_password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20dp"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:inputType="textPassword"
            android:id="@+id/password_input"/>

        <Button
            android:layout_width="240dp"
            android:layout_height="72dp"
            android:text="@string/log_in"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corner"
            android:padding="18dp"
            android:layout_marginTop="40dp"
            android:textSize="26dp"
            android:id="@+id/login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_login"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_marginTop="32dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="16dp"
                android:id="@+id/facebook"
                android:src="@drawable/facebook"/>

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="16dp"
                android:id="@+id/google"
                android:src="@drawable/instergram"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>