<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.theme.onboarding_screen_1"
    android:background="#E91E63">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/top_background"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-16dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="282dp"
            android:layout_height="363dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:src="@drawable/white_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.575" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="204dp"
            android:layout_height="143dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/let_s_get_started_in_this_journey"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="229dp"
            android:layout_height="153dp"
            android:layout_marginStart="30dp"
            android:fontFamily="serif"
            android:text="@string/soulscroll_will_help_you_organize_your_day_and_keep_track_of_your_life_journey"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/soulscroll"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="80sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/onboarding1"
            android:layout_width="113dp"
            android:layout_height="45dp"
            android:layout_marginStart="80dp"
            android:src="@drawable/baseline_arrow_forward_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.328"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="750dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>